# exercism-Python-Solutions

./: .gitignore  LICENSE  README.md  pyproject.toml
acronym/: acronym.py
affine-cipher/: affine_cipher.py
all-your-base/: all_your_base.py
allergies/: allergies.py  allergies_test.py
alphametics/: alphametics.py  alphametics_test.py
anagram/: anagram.py
armstrong-numbers/: armstrong_numbers.py
atbash-cipher/: atbash_cipher.py
bank-account/: bank_account.py
beer-song/: beer_song.py
binary-search/: binary_search.py  binary_search_test.py
binary-search-tree/: binary_search_tree.py  binary_search_tree_test.py
black-jack/: black_jack.py
bob/: bob.py
book-store/: book_store.py  book_store_test.py
bowling/: bowling.py  bowling_test.py
card-games/: lists.py
cater-waiter/: sets.py
chaitanas-colossal-coaster/: list_methods.py
change/: change.py  change_test.py
circular-buffer/: circular_buffer.py
clock/: clock.py
collatz-conjecture/: collatz_conjecture.py
complex-numbers/: complex_numbers.py  complex_numbers_test.py
connect/: connect.py  connect_test.py
crypto-square/: crypto_square.py
currency-exchange/: exchange.py
custom-set/: custom_set.py
darts/: darts.py
diamond/: diamond.py
difference-of-squares/: difference_of_squares.py
diffie-hellman/: diffie_hellman.py
dnd-character/: dnd_character.py  dnd_character_test.py
dominoes/: dominoes.py  dominoes_test.py
dot-dsl/: dot_dsl.py
ellens-alien-game/: classes.py
etl/: etl.py
flatten-array/: flatten_array.py
food-chain/: food_chain.py
forth/: forth.py  (+1 more)
(+113 files in other folders)
