[tool.poetry]
name = "Exercism Solutions"
version = "0.1.0"
description = "My solutions for the Python track at Exercism"
authors = ["Tamir <37386851+tamireinhorn@users.noreply.github.com>"]
license = "MIT]"

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^4.0.1"
regex = "^2022.7.25"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
